// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hiscores getHiscores should default type to HiscoreTypes.normal 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.json",
}
`;

exports[`Hiscores getHiscores should hit the specified hiscore type endpoint 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool_seasonal/index_lite.json",
}
`;

exports[`Hiscores getHiscores should make a GET request 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.json",
}
`;

exports[`Hiscores getHiscores should make a request with the passed in player name 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.json",
}
`;

exports[`Hiscores getHiscores should properly parse rank and kills for each boss 1`] = `
{
  "abyssalSire": {
    "kills": 378,
    "rank": 67259,
  },
  "alchemicalHydra": {
    "kills": -1,
    "rank": -1,
  },
  "artio": {
    "kills": -1,
    "rank": -1,
  },
  "barrowsChests": {
    "kills": 415,
    "rank": 118411,
  },
  "bryophyta": {
    "kills": -1,
    "rank": -1,
  },
  "callisto": {
    "kills": -1,
    "rank": -1,
  },
  "calvarion": {
    "kills": -1,
    "rank": -1,
  },
  "cerberus": {
    "kills": 523,
    "rank": 109169,
  },
  "chambersOfXeric": {
    "kills": 5,
    "rank": 280941,
  },
  "chambersOfXericChallengeMode": {
    "kills": -1,
    "rank": -1,
  },
  "chaosElemental": {
    "kills": 6,
    "rank": 216568,
  },
  "chaosFanatic": {
    "kills": 7,
    "rank": 262766,
  },
  "commanderZilyana": {
    "kills": 57,
    "rank": 150724,
  },
  "corporealBeast": {
    "kills": 93,
    "rank": 75450,
  },
  "corruptedGauntlet": {
    "kills": -1,
    "rank": -1,
  },
  "crazyArchaeologist": {
    "kills": -1,
    "rank": -1,
  },
  "dagannothPrime": {
    "kills": 164,
    "rank": 144052,
  },
  "dagannothRex": {
    "kills": 160,
    "rank": 222091,
  },
  "dagannothSupreme": {
    "kills": 162,
    "rank": 144942,
  },
  "derangedArchaeologist": {
    "kills": -1,
    "rank": -1,
  },
  "dukeSucellus": {
    "kills": 300,
    "rank": 27263,
  },
  "gauntlet": {
    "kills": -1,
    "rank": -1,
  },
  "generalGraardor": {
    "kills": 14,
    "rank": 384524,
  },
  "giantMole": {
    "kills": 674,
    "rank": 51006,
  },
  "grotesqueGuardians": {
    "kills": -1,
    "rank": -1,
  },
  "hespori": {
    "kills": 20,
    "rank": 367363,
  },
  "kalphiteQueen": {
    "kills": 33,
    "rank": 183558,
  },
  "kingBlackDragon": {
    "kills": 180,
    "rank": 179394,
  },
  "kraken": {
    "kills": 33,
    "rank": 433886,
  },
  "krilTsutsaroth": {
    "kills": 62,
    "rank": 136012,
  },
  "leviathan": {
    "kills": -1,
    "rank": -1,
  },
  "lunarChests": {
    "kills": -1,
    "rank": -1,
  },
  "mimic": {
    "kills": 3,
    "rank": 67697,
  },
  "nex": {
    "kills": 220,
    "rank": 60466,
  },
  "nightmare": {
    "kills": 11,
    "rank": 78985,
  },
  "obor": {
    "kills": -1,
    "rank": -1,
  },
  "phantomMuspah": {
    "kills": -1,
    "rank": -1,
  },
  "phosanisNightmare": {
    "kills": -1,
    "rank": -1,
  },
  "sarachnis": {
    "kills": -1,
    "rank": -1,
  },
  "scorpia": {
    "kills": -1,
    "rank": -1,
  },
  "scurrius": {
    "kills": -1,
    "rank": -1,
  },
  "skotizo": {
    "kills": 12,
    "rank": 343162,
  },
  "solHeredit": {
    "kills": -1,
    "rank": -1,
  },
  "spindel": {
    "kills": -1,
    "rank": -1,
  },
  "tempoross": {
    "kills": -1,
    "rank": -1,
  },
  "theatreOfBlood": {
    "kills": -1,
    "rank": -1,
  },
  "theatreOfBloodHardMode": {
    "kills": -1,
    "rank": -1,
  },
  "thermonuclearSmokeDevil": {
    "kills": 62,
    "rank": 210974,
  },
  "tombsOfAmascut": {
    "kills": 39,
    "rank": 104520,
  },
  "tombsOfAmascutExpertMode": {
    "kills": 98,
    "rank": 39806,
  },
  "tzKalZuk": {
    "kills": 1,
    "rank": 66930,
  },
  "tzTokJad": {
    "kills": 8,
    "rank": 132682,
  },
  "vardorvis": {
    "kills": 5,
    "rank": 74661,
  },
  "venenatis": {
    "kills": 191,
    "rank": 48701,
  },
  "vetion": {
    "kills": -1,
    "rank": -1,
  },
  "vorkath": {
    "kills": 134,
    "rank": 324943,
  },
  "whisperer": {
    "kills": -1,
    "rank": -1,
  },
  "wintertodt": {
    "kills": 404,
    "rank": 273489,
  },
  "zalcano": {
    "kills": -1,
    "rank": -1,
  },
  "zulrah": {
    "kills": 690,
    "rank": 144697,
  },
}
`;

exports[`Hiscores getHiscores should properly parse rank and score for each minigame 1`] = `
{
  "bountyHunter": {
    "rank": -1,
    "score": -1,
  },
  "bountyHunterLegacy": {
    "rank": 165259,
    "score": 6,
  },
  "bountyHunterRogues": {
    "rank": -1,
    "score": -1,
  },
  "bountyHunterRoguesLegacy": {
    "rank": 110828,
    "score": 6,
  },
  "clueScrollsAll": {
    "rank": 47193,
    "score": 790,
  },
  "clueScrollsBeginner": {
    "rank": 141378,
    "score": 27,
  },
  "clueScrollsEasy": {
    "rank": 86502,
    "score": 65,
  },
  "clueScrollsElite": {
    "rank": 19730,
    "score": 118,
  },
  "clueScrollsHard": {
    "rank": 13546,
    "score": 454,
  },
  "clueScrollsMaster": {
    "rank": 30691,
    "score": 69,
  },
  "clueScrollsMedium": {
    "rank": 218855,
    "score": 57,
  },
  "colosseumGlory": {
    "rank": -1,
    "score": -1,
  },
  "deadmanPoints": {
    "rank": -1,
    "score": -1,
  },
  "leaguePoints": {
    "rank": -1,
    "score": -1,
  },
  "lms": {
    "rank": 99503,
    "score": 713,
  },
  "pvpArena": {
    "rank": -1,
    "score": -1,
  },
  "riftsClosed": {
    "rank": 225962,
    "score": 95,
  },
  "soulWarsZeal": {
    "rank": -1,
    "score": -1,
  },
}
`;

exports[`Hiscores getHiscores should properly parse rank, level, and xp for each skill 1`] = `
{
  "agility": {
    "level": 86,
    "rank": 174926,
    "xp": 3729978,
  },
  "attack": {
    "level": 99,
    "rank": 71108,
    "xp": 21036183,
  },
  "construction": {
    "level": 99,
    "rank": 86757,
    "xp": 13041014,
  },
  "cooking": {
    "level": 99,
    "rank": 70208,
    "xp": 14859621,
  },
  "crafting": {
    "level": 99,
    "rank": 87542,
    "xp": 13319584,
  },
  "defence": {
    "level": 99,
    "rank": 47248,
    "xp": 19949773,
  },
  "farming": {
    "level": 99,
    "rank": 190320,
    "xp": 13234264,
  },
  "firemaking": {
    "level": 99,
    "rank": 61987,
    "xp": 14106064,
  },
  "fishing": {
    "level": 99,
    "rank": 119275,
    "xp": 13036031,
  },
  "fletching": {
    "level": 99,
    "rank": 54046,
    "xp": 13487038,
  },
  "herblore": {
    "level": 99,
    "rank": 38417,
    "xp": 13275359,
  },
  "hitpoints": {
    "level": 99,
    "rank": 99900,
    "xp": 35121963,
  },
  "hunter": {
    "level": 84,
    "rank": 249465,
    "xp": 3144075,
  },
  "magic": {
    "level": 99,
    "rank": 56427,
    "xp": 23800712,
  },
  "mining": {
    "level": 99,
    "rank": 52198,
    "xp": 13598780,
  },
  "overall": {
    "level": 2219,
    "rank": 72265,
    "xp": 343590142,
  },
  "prayer": {
    "level": 99,
    "rank": 22499,
    "xp": 13537451,
  },
  "ranged": {
    "level": 99,
    "rank": 136761,
    "xp": 27398193,
  },
  "runecrafting": {
    "level": 86,
    "rank": 168058,
    "xp": 3688395,
  },
  "slayer": {
    "level": 99,
    "rank": 86418,
    "xp": 14425551,
  },
  "smithing": {
    "level": 89,
    "rank": 174417,
    "xp": 5196048,
  },
  "strength": {
    "level": 99,
    "rank": 61841,
    "xp": 30796373,
  },
  "thieving": {
    "level": 92,
    "rank": 184318,
    "xp": 6575826,
  },
  "woodcutting": {
    "level": 99,
    "rank": 98967,
    "xp": 13231866,
  },
}
`;

exports[`Hiscores getHiscores should return skills, minigames, and bosses from a json response 1`] = `
{
  "bosses": {
    "abyssalSire": {
      "kills": 378,
      "rank": 67259,
    },
    "alchemicalHydra": {
      "kills": -1,
      "rank": -1,
    },
    "artio": {
      "kills": -1,
      "rank": -1,
    },
    "barrowsChests": {
      "kills": 415,
      "rank": 118411,
    },
    "bryophyta": {
      "kills": -1,
      "rank": -1,
    },
    "callisto": {
      "kills": -1,
      "rank": -1,
    },
    "calvarion": {
      "kills": -1,
      "rank": -1,
    },
    "cerberus": {
      "kills": 523,
      "rank": 109169,
    },
    "chambersOfXeric": {
      "kills": 5,
      "rank": 280941,
    },
    "chambersOfXericChallengeMode": {
      "kills": -1,
      "rank": -1,
    },
    "chaosElemental": {
      "kills": 6,
      "rank": 216568,
    },
    "chaosFanatic": {
      "kills": 7,
      "rank": 262766,
    },
    "commanderZilyana": {
      "kills": 57,
      "rank": 150724,
    },
    "corporealBeast": {
      "kills": 93,
      "rank": 75450,
    },
    "corruptedGauntlet": {
      "kills": -1,
      "rank": -1,
    },
    "crazyArchaeologist": {
      "kills": -1,
      "rank": -1,
    },
    "dagannothPrime": {
      "kills": 164,
      "rank": 144052,
    },
    "dagannothRex": {
      "kills": 160,
      "rank": 222091,
    },
    "dagannothSupreme": {
      "kills": 162,
      "rank": 144942,
    },
    "derangedArchaeologist": {
      "kills": -1,
      "rank": -1,
    },
    "dukeSucellus": {
      "kills": 300,
      "rank": 27263,
    },
    "gauntlet": {
      "kills": -1,
      "rank": -1,
    },
    "generalGraardor": {
      "kills": 14,
      "rank": 384524,
    },
    "giantMole": {
      "kills": 674,
      "rank": 51006,
    },
    "grotesqueGuardians": {
      "kills": -1,
      "rank": -1,
    },
    "hespori": {
      "kills": 20,
      "rank": 367363,
    },
    "kalphiteQueen": {
      "kills": 33,
      "rank": 183558,
    },
    "kingBlackDragon": {
      "kills": 180,
      "rank": 179394,
    },
    "kraken": {
      "kills": 33,
      "rank": 433886,
    },
    "krilTsutsaroth": {
      "kills": 62,
      "rank": 136012,
    },
    "leviathan": {
      "kills": -1,
      "rank": -1,
    },
    "lunarChests": {
      "kills": -1,
      "rank": -1,
    },
    "mimic": {
      "kills": 3,
      "rank": 67697,
    },
    "nex": {
      "kills": 220,
      "rank": 60466,
    },
    "nightmare": {
      "kills": 11,
      "rank": 78985,
    },
    "obor": {
      "kills": -1,
      "rank": -1,
    },
    "phantomMuspah": {
      "kills": -1,
      "rank": -1,
    },
    "phosanisNightmare": {
      "kills": -1,
      "rank": -1,
    },
    "sarachnis": {
      "kills": -1,
      "rank": -1,
    },
    "scorpia": {
      "kills": -1,
      "rank": -1,
    },
    "scurrius": {
      "kills": -1,
      "rank": -1,
    },
    "skotizo": {
      "kills": 12,
      "rank": 343162,
    },
    "solHeredit": {
      "kills": -1,
      "rank": -1,
    },
    "spindel": {
      "kills": -1,
      "rank": -1,
    },
    "tempoross": {
      "kills": -1,
      "rank": -1,
    },
    "theatreOfBlood": {
      "kills": -1,
      "rank": -1,
    },
    "theatreOfBloodHardMode": {
      "kills": -1,
      "rank": -1,
    },
    "thermonuclearSmokeDevil": {
      "kills": 62,
      "rank": 210974,
    },
    "tombsOfAmascut": {
      "kills": 39,
      "rank": 104520,
    },
    "tombsOfAmascutExpertMode": {
      "kills": 98,
      "rank": 39806,
    },
    "tzKalZuk": {
      "kills": 1,
      "rank": 66930,
    },
    "tzTokJad": {
      "kills": 8,
      "rank": 132682,
    },
    "vardorvis": {
      "kills": 5,
      "rank": 74661,
    },
    "venenatis": {
      "kills": 191,
      "rank": 48701,
    },
    "vetion": {
      "kills": -1,
      "rank": -1,
    },
    "vorkath": {
      "kills": 134,
      "rank": 324943,
    },
    "whisperer": {
      "kills": -1,
      "rank": -1,
    },
    "wintertodt": {
      "kills": 404,
      "rank": 273489,
    },
    "zalcano": {
      "kills": -1,
      "rank": -1,
    },
    "zulrah": {
      "kills": 690,
      "rank": 144697,
    },
  },
  "minigames": {
    "bountyHunter": {
      "rank": -1,
      "score": -1,
    },
    "bountyHunterLegacy": {
      "rank": 165259,
      "score": 6,
    },
    "bountyHunterRogues": {
      "rank": -1,
      "score": -1,
    },
    "bountyHunterRoguesLegacy": {
      "rank": 110828,
      "score": 6,
    },
    "clueScrollsAll": {
      "rank": 47193,
      "score": 790,
    },
    "clueScrollsBeginner": {
      "rank": 141378,
      "score": 27,
    },
    "clueScrollsEasy": {
      "rank": 86502,
      "score": 65,
    },
    "clueScrollsElite": {
      "rank": 19730,
      "score": 118,
    },
    "clueScrollsHard": {
      "rank": 13546,
      "score": 454,
    },
    "clueScrollsMaster": {
      "rank": 30691,
      "score": 69,
    },
    "clueScrollsMedium": {
      "rank": 218855,
      "score": 57,
    },
    "colosseumGlory": {
      "rank": -1,
      "score": -1,
    },
    "deadmanPoints": {
      "rank": -1,
      "score": -1,
    },
    "leaguePoints": {
      "rank": -1,
      "score": -1,
    },
    "lms": {
      "rank": 99503,
      "score": 713,
    },
    "pvpArena": {
      "rank": -1,
      "score": -1,
    },
    "riftsClosed": {
      "rank": 225962,
      "score": 95,
    },
    "soulWarsZeal": {
      "rank": -1,
      "score": -1,
    },
  },
  "skills": {
    "agility": {
      "level": 86,
      "rank": 174926,
      "xp": 3729978,
    },
    "attack": {
      "level": 99,
      "rank": 71108,
      "xp": 21036183,
    },
    "construction": {
      "level": 99,
      "rank": 86757,
      "xp": 13041014,
    },
    "cooking": {
      "level": 99,
      "rank": 70208,
      "xp": 14859621,
    },
    "crafting": {
      "level": 99,
      "rank": 87542,
      "xp": 13319584,
    },
    "defence": {
      "level": 99,
      "rank": 47248,
      "xp": 19949773,
    },
    "farming": {
      "level": 99,
      "rank": 190320,
      "xp": 13234264,
    },
    "firemaking": {
      "level": 99,
      "rank": 61987,
      "xp": 14106064,
    },
    "fishing": {
      "level": 99,
      "rank": 119275,
      "xp": 13036031,
    },
    "fletching": {
      "level": 99,
      "rank": 54046,
      "xp": 13487038,
    },
    "herblore": {
      "level": 99,
      "rank": 38417,
      "xp": 13275359,
    },
    "hitpoints": {
      "level": 99,
      "rank": 99900,
      "xp": 35121963,
    },
    "hunter": {
      "level": 84,
      "rank": 249465,
      "xp": 3144075,
    },
    "magic": {
      "level": 99,
      "rank": 56427,
      "xp": 23800712,
    },
    "mining": {
      "level": 99,
      "rank": 52198,
      "xp": 13598780,
    },
    "overall": {
      "level": 2219,
      "rank": 72265,
      "xp": 343590142,
    },
    "prayer": {
      "level": 99,
      "rank": 22499,
      "xp": 13537451,
    },
    "ranged": {
      "level": 99,
      "rank": 136761,
      "xp": 27398193,
    },
    "runecrafting": {
      "level": 86,
      "rank": 168058,
      "xp": 3688395,
    },
    "slayer": {
      "level": 99,
      "rank": 86418,
      "xp": 14425551,
    },
    "smithing": {
      "level": 89,
      "rank": 174417,
      "xp": 5196048,
    },
    "strength": {
      "level": 99,
      "rank": 61841,
      "xp": 30796373,
    },
    "thieving": {
      "level": 92,
      "rank": 184318,
      "xp": 6575826,
    },
    "woodcutting": {
      "level": 99,
      "rank": 98967,
      "xp": 13231866,
    },
  },
}
`;
